# akobot

./: .gitignore  Cargo.toml
src/: ext.rs  main.rs
src/bot/: greet.rs  mod.rs
