[package]
name = "akobot"
version = "0.1.0"
edition = "2021"
publish = false
license = "EUPL-1.2"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
far = "0.2"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["rt", "net", "fs"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-gateway = "0.10"
twilight-http = "0.10"
twilight-mention = "0.10"
twilight-model = "0.10"
twilight-util = { version = "0.10", features = ["builder", "snowflake"] }
